# DJIcontrol

./: .ycm_extra_conf.py
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/include/dji_sdk/: ActivationRequest.h  ActivationResponse.h  CameraActionRequest.h  CameraActionResponse.h  DroneArmControlRequest.h  DroneArmControlResponse.h  DroneTaskControlRequest.h  DroneTaskControlResponse.h  FlightAnomaly.h  Gimbal.h  MFIOConfigRequest.h  MFIOConfigResponse.h  MFIOSetValueRequest.h  MFIOSetValueResponse.h  MissionHotpointTask.h  MissionHpActionRequest.h  MissionHpActionResponse.h  MissionHpGetInfoRequest.h  MissionHpGetInfoResponse.h  MissionHpResetYawRequest.h  MissionHpResetYawResponse.h  MissionHpUpdateRadiusRequest.h  MissionHpUpdateRadiusResponse.h  MissionHpUpdateYawRateRequest.h  MissionHpUpdateYawRateResponse.h  MissionHpUploadRequest.h  MissionHpUploadResponse.h  MissionStatusRequest.h  MissionStatusResponse.h  MissionWaypoint.h  MissionWaypointAction.h  MissionWaypointTask.h  MissionWpActionRequest.h  MissionWpActionResponse.h  MissionWpGetInfoRequest.h  MissionWpGetInfoResponse.h  MissionWpGetSpeedRequest.h  MissionWpGetSpeedResponse.h  MissionWpSetSpeedRequest.h  MissionWpSetSpeedResponse.h  (+24 more)
devel/lib/dji_rpy_control/: dji_rpy_control
devel/lib/dji_sdk_demo/: demo_camera_gimbal  demo_flight_control  demo_local_position_control  demo_mfio  demo_mission  demo_mobile_comm
devel/lib/dji_takeoff_nogps/: nogps_takeoff
devel/lib/dji_try/: dji_try
devel/lib/getdjistate/: getdjistate
devel/lib/getodometry/: getodometry
devel/lib/getstate/: getodometry
devel/lib/getstatedjiraw/: getstatedjiraw
devel/lib/pkgconfig/: DJIstate.pc  dji_rpy_control.pc  dji_sdk.pc  dji_sdk_demo.pc  dji_takeoff_nogps.pc  dji_try.pc  getDJIstate.pc  getdjistate.pc  getodometry.pc  getstate.pc  getstatedjiraw.pc
src/: readme
src/dji_rpy_control/: CMakeLists.txt
src/dji_rpy_control/src/: djirpycontrol.cpp
src/dji_takeoff_nogps/: CMakeLists.txt  package.xml
src/dji_takeoff_nogps/src/: nogps_takeoff.cpp
src/dji_try/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
src/dji_try/src/: dji_try.cpp  dji_try.cpp~
src/getdjistate/: CMakeLists.txt
src/getdjistate/include/: math_units.h
src/getdjistate/src/: getdjistate.cpp
src/getstate/: CMakeLists.txt  package.xml
src/getstate/include/: SubState.h  UAVstate.h  kbhitubuntu.h  math_units.h
src/getstate/src/: getodometry.cpp
src/getstatedjiraw/: CMakeLists.txt  package.xml
(+19 files in other folders)
